# computer-use-with-slm

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: lfm2_350m_lora.yaml
src/cua/: config.py  evaluate.py  finetune.py  modal_infra.py  paths.py
